Git Tests/force-app/main/default/default/objects/NotasFiscais__c/NotasFiscais__c.object-meta.xml
<CustomObject>
    <label>Nota fiscal</label>
    <nameField>
        <label>Número da nota fiscal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notas fiscais</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>