Git Tests/force-app/main/default/default/objects/NotasFiscais__c/fields/CFOP__c.field-meta.xml
<CustomField>
    <fullName>CFOP__c</fullName>
    <label>CFOP</label>
    <length>5</length>
    <type>Text</type>
</CustomField>