Git Tests/force-app/main/default/default/objects/NotasFiscais__c/fields/CondicaoPagamento__c.field-meta.xml
<CustomField>
    <fullName>CondicaoPagamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condição de pagamento</label>
    <referenceTo>CondicaoPagamento__c</referenceTo>
    <relationshipLabel>Notas fiscais</relationshipLabel>
    <relationshipName>NotasFiscais</relationshipName>
    <type>Lookup</type>
</CustomField>