Git Tests/force-app/main/default/default/objects/NotasFiscais__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <label>Empresa/Filial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>