Git Tests/force-app/main/default/default/objects/NotasFiscais__c/fields/Estado_do_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Estado_do_Pedido__c</fullName>
    <formula>TEXT(Pedido__r.Status)</formula>
    <label>Estado do Pedido</label>
    <type>Text</type>
</CustomField>