Git Tests/force-app/main/default/default/objects/NotasFiscais__c/fields/MensagemNota__c.field-meta.xml
<CustomField>
    <fullName>MensagemNota__c</fullName>
    <label>Mensagem da nota</label>
    <length>255</length>
    <type>Text</type>
</CustomField>