Git Tests/force-app/main/default/default/objects/NotasFiscais__c/fields/NaturezaOperacao__c.field-meta.xml
<CustomField>
    <fullName>NaturezaOperacao__c</fullName>
    <label>Natureza da Operação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>