Git Tests/force-app/main/default/default/objects/NotasFiscais__c/fields/Numero_e_serie__c.field-meta.xml
<CustomField>
    <fullName>Numero_e_serie__c</fullName>
    <formula>SUBSTITUTE(
	SUBSTITUTE(
		SUBSTITUTE(Name,&quot;.&quot;,&quot;&quot;),
	&quot;/&quot;,&quot;&quot;),
&quot;-&quot;,&quot;&quot;) &amp;  SUBSTITUTE(
	SUBSTITUTE(
		SUBSTITUTE(SerieNota__c,&quot;.&quot;,&quot;&quot;),
	&quot;/&quot;,&quot;&quot;),
&quot;-&quot;,&quot;&quot;)</formula>
    <label>Número e série</label>
    <type>Text</type>
</CustomField>