Git Tests/force-app/main/default/default/objects/NotasFiscais__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Número do pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Notas fiscais</relationshipLabel>
    <relationshipName>NotasFiscais</relationshipName>
    <type>Lookup</type>
</CustomField>