Git Tests/force-app/main/default/default/objects/NotasFiscais__c/fields/SerieNota__c.field-meta.xml
<CustomField>
    <fullName>SerieNota__c</fullName>
    <label>Série da nota</label>
    <length>2</length>
    <type>Text</type>
</CustomField>