Git Tests/force-app/main/default/default/objects/NotasFiscais__c/fields/ValorTotal__c.field-meta.xml
<CustomField>
    <fullName>ValorTotal__c</fullName>
    <label>Valor Total</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>