Git Tests/force-app/main/default/default/objects/NotasFiscais__c/recordTypes/Devolucao.recordType-meta.xml
<RecordType>
    <fullName>Devolucao</fullName>
    <active>true</active>
    <label>Devolução</label>
</RecordType>